# On-Device-Real-Estate-Assistant

./: .gitattributes  .gitignore  README.md  convert.py  project-t5.ipynb  project.ipynb  project1.ipynb
06_Visualize/: all_benchmarks_final.json  generate_tradeoff_plots.py
CoolCall/: settings.gradle.kts
app/android/app/src/main/cpp/: CMakeLists.txt
benchmarks/: requirements.txt
flan_t5_zillow_final1/: config.json  generation_config.json  model.safetensors
models/: export_to_onnx.py  zillow_flan_t5_finetune.ipynb
my_benchmark_results/: all_benchmarks.json  baseline_benchmark.py  bf16_cast_gpu_log.txt  bf16_cast_gpu_metrics.json  combined_quant_then_prune_selected__bf16_cast_gpu__prune_unstructured_mlp_l1_10_log.txt  combined_quant_then_prune_selected__bf16_cast_gpu__prune_unstructured_mlp_l1_10_metrics.json  combined_quant_then_prune_selected__fp16_cast_gpu__prune_unstructured_mlp_l1_10_log.txt  combined_quant_then_prune_selected__fp16_cast_gpu__prune_unstructured_mlp_l1_10_metrics.json  combined_structured_prune_then_quant__prune_structured_attention_heads_1__bf16_cast_gpu_log.txt  combined_structured_prune_then_quant__prune_structured_attention_heads_1__bf16_cast_gpu_metrics.json  combined_structured_prune_then_quant__prune_structured_mlp_intermediate_10__fp16_cast_gpu_log.txt  combined_structured_prune_then_quant__prune_structured_mlp_intermediate_10__fp16_cast_gpu_metrics.json  combined_unstructured_prune_then_quant__prune_unstructured_mlp_l1_10__dynamic_int8_cpu_ptq_log.txt  dynamic_int8_cpu_ptq_log.txt  dynamic_int8_cpu_ptq_metrics.json  run_benchmark.py  (+18 more)
(+84 files in other folders)
